# Lunu

./: .gitignore  .luaurc  README.md  init.luau  rokit.toml
builder/: CMakeLists.txt  Cargo.toml  README.md
builder/src/: builder_lib.rs  lib.rs  main.cpp  stub.c
config/: settings.json
examples/hello-python/: .luaurc  lunu.toml  main.luau
examples/hello-python/config/: settings.json
examples/hello-python/src/: main.luau
examples/template-lib/: hello.luau  init.luau
installer/: LunuInstaller.nsi
modules/hello-python/: bridge.json  worker.py
modules/hello-python/tests/: test_worker.py
scripts/: install.ps1  setup.ps1
src/bridge/: server.py
src/libs/numpy_core/: impl.py
toolchain/: Cargo.toml  README.md
toolchain/scripts/: build.ps1  install_path.ps1
toolchain/src/: bridge.rs  bridge_server.rs  compat.rs  config.rs  github.rs  lib.rs  lock.rs  main.rs  package.rs  project.rs
toolchain/tests/: cli_functional.rs
