[package]
name = "lunu-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
zip = "0.6"
anyhow = "1.0"
walkdir = "2.4"
dirs = "5.0"
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }

[[bin]]
name = "lunu-build"
path = "src/bin/builder.rs"

[[bin]]
name = "lunu-stub"
path = "src/bin/stub.rs"
