[package]
name = "lunu-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] } # Minimal zip
anyhow = "1.0"
walkdir = "2.4"
dirs = "5.0"

[[bin]]
name = "lunu-build"
path = "src/bin/builder.rs"

[[bin]]
name = "lunu-stub"
path = "src/bin/stub.rs"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Maximize optimization
panic = "abort"     # Remove panic unwinding overhead
strip = true        # Strip symbols
