[package]
name = "lunu-cli"
version = "0.1.0"
edition = "2021"
authors = ["Lunu Toolchain"]
description = "Robust library management toolchain for Lunu"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = { version = "0.18", default-features = false, features = ["https", "openssl-sys"] }
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
fs_extra = "1.3"
tempfile = "3.10"
path-clean = "1.0"
futures = "0.3"
pathdiff = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
